add error handling for FE, fix register endpoint for api gateway
